simple-microservices/organization-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
spec:
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
      - name: organization
        image: piomin/organization-service
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - mountPath: /etc/podinfo
            name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: v1
kind: Service
metadata:
  name: organization-service
spec:
  type: ClusterIP
  selector:
    app: organization
  ports:
  - port: 8080
    targetPort: 8080
    name: http
