simple-microservices/organization-service/k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: organization-service-destination
spec:
  host: organization-service.microservices.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: organization-service-route
spec:
  hosts:
    - organization-service.microservices.svc.cluster.local
  http:
    - match:
        - headers:
            X-Version:
              exact: v1
      route:
        - destination:
            host: organization-service.microservices.svc.cluster.local
            subset: v1
    - match:
        - headers:
            X-Version:
              exact: v2
      route:
        - destination:
            host: organization-service.microservices.svc.cluster.local
            subset: v2
    - route:
        - destination:
            host: organization-service.microservices.svc.cluster.local
            subset: v1
